# foreman

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  justfile  pitch-slide.html  pyproject.toml
PRDs/foreman-mvp/: PRD.md
PRDs/foreman-mvp/agents/: api-answer-agent.md  api-core-agent.md  foundation-agent.md  frontend-agent.md  ingestion-agent.md  polish-agent.md  synthetic-data-agent.md
PRDs/foreman-mvp/progress/: progress-api-answer.txt  progress-api-core.txt  progress-foundation.txt  progress-frontend.txt  progress-ingestion.txt  progress-polish.txt  progress-synthetic-data.txt
data/: FORMAT.md  seed.py
data/raw/: maintenance_press.md  quality_inspection.md  safety_loto.md
docs/architecture/: 2026-06-13_tree-into-graph-architecture.md
docs/plans/: 2026-06-13_design-considerations.md
docs/reference/: 2026-06-13_lessons-prove-maisight.md  2026-06-13_qa-questions.md
scripts/: demo.py  demo_ui.py  ralph.py
src/api/: app.py  curation.py  dependencies.py
src/api/routes/: answer.py  docs.py  retrieve.py  router.py
src/api/schemas/: __init__.py
src/core/: config.py  neo4j_client.py  setup_indexes.py
src/ingestion/: classifier.py  context_generator.py  embedder.py  graph_builder.py  parser.py  pipeline.py
src/models/: api.py  nodes.py  retrieval.py
src/taxonomy/: domains.py
tests/: test_parser.py  test_taxonomy.py
